Fix bug 347865 (PyXPCOM fails to build on alpha) on trunk. Not part of the default build.